--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8084
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=proiect
+spring.datasource.password=PROIECT
