--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -110,11 +110,17 @@
 			<version>4.9.1</version>
 		</dependency>
 
-		<!-- JGraphT Import/Export -->
+
 		<dependency>
 			<groupId>org.jgrapht</groupId>
 			<artifactId>jgrapht-io</artifactId>
 			<version>1.5.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.choco-solver</groupId>
+			<artifactId>choco-solver</artifactId>
+			<version>4.10.12</version>
 		</dependency>
 	</dependencies>
 
