--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -122,6 +122,18 @@
 			<artifactId>choco-solver</artifactId>
 			<version>4.10.12</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-ui</artifactId>
+		<version>1.6.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
